--- a/config-h.in
+++ b/config-h.in
@@ -72,6 +72,12 @@
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
+/* Define to 1 if you have the <jpeglib.h> header file. */
+#undef HAVE_JPEGLIB_H
+
+/* Define to 1 if you have the `jpeg' library (-ljpeg). */
+#undef HAVE_LIBJPEG
+
 /* Define to 1 if you have the `m' library (-lm). */
 #undef HAVE_LIBM
 
@@ -132,6 +138,9 @@
 
 /* Define to 1 if you have the `memset' function. */
 #undef HAVE_MEMSET
+
+/* Define to 1 if you have the open_memstream() function. */
+#undef HAVE_OPEN_MEMSTREAM
 
 /* Define to 1 if you have the <pcap.h> header file. */
 #undef HAVE_PCAP_H
