--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -57,12 +57,12 @@ DIST_COMMON = $(nobase_include_HEADERS) $(noinst_HEADERS) \
 	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(srcdir)/spandsp.h.in $(top_srcdir)/config-h.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/config/ax_compiler_vendor.m4 \
-	$(top_srcdir)/config/ax_check_real_file.m4 \
-	$(top_srcdir)/config/ax_fixed_point_machine.m4 \
-	$(top_srcdir)/config/ax_misaligned_access_fails.m4 \
-	$(top_srcdir)/config/ax_c99_features.m4 \
-	$(top_srcdir)/config/ax_check_export_capability.m4 \
+am__aclocal_m4_deps = $(top_srcdir)/m4/ax_compiler_vendor.m4 \
+	$(top_srcdir)/m4/ax_check_real_file.m4 \
+	$(top_srcdir)/m4/ax_fixed_point_machine.m4 \
+	$(top_srcdir)/m4/ax_misaligned_access_fails.m4 \
+	$(top_srcdir)/m4/ax_c99_features.m4 \
+	$(top_srcdir)/m4/ax_check_export_capability.m4 \
 	$(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
@@ -183,6 +183,9 @@ EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 FGREP = @FGREP@
 GREP = @GREP@
+HAVE_FAX2TIFF = @HAVE_FAX2TIFF@
+HAVE_PBMTOG3 = @HAVE_PBMTOG3@
+HAVE_SOX = @HAVE_SOX@
 INSERT_INTTYPES_HEADER = @INSERT_INTTYPES_HEADER@
 INSERT_MATH_HEADER = @INSERT_MATH_HEADER@
 INSERT_STDINT_HEADER = @INSERT_STDINT_HEADER@
@@ -587,15 +590,15 @@ nobase_include_HEADERS = spandsp/ademco_contactid.h \
 
 nodist_include_HEADERS = spandsp.h
 noinst_HEADERS = faxfont.h \
-                         filter_tools.h \
-                         gsm0610_local.h \
-                         lpc10_encdecs.h \
-                         mmx_sse_decs.h \
-                         t30_local.h \
-                         t4_t6_decode_states.h \
-                         v17_v32bis_rx_constellation_maps.h \
-                         v17_v32bis_tx_constellation_maps.h \
-                         v29tx_constellation_maps.h
+                 filter_tools.h \
+                 gsm0610_local.h \
+                 lpc10_encdecs.h \
+                 mmx_sse_decs.h \
+                 t30_local.h \
+                 t4_t6_decode_states.h \
+                 v17_v32bis_rx_constellation_maps.h \
+                 v17_v32bis_tx_constellation_maps.h \
+                 v29tx_constellation_maps.h
 
 V17_V32BIS_RX_INCL = v17_v32bis_rx_fixed_rrc.h \
                      v17_v32bis_rx_floating_rrc.h
