--- a/src/libspandsp.2005.vcproj
+++ b/src/libspandsp.2005.vcproj
@@ -224,6 +224,7 @@
 <File RelativePath="spandsp/queue.h"></File>
 <File RelativePath="spandsp/saturated.h"></File>
 <File RelativePath="spandsp/schedule.h"></File>
+<File RelativePath="spandsp/stdbool.h"></File>
 <File RelativePath="spandsp/sig_tone.h"></File>
 <File RelativePath="spandsp/silence_gen.h"></File>
 <File RelativePath="spandsp/super_tone_rx.h"></File>
