--- a/src/spandsp.h.in
+++ b/src/spandsp.h.in
@@ -39,6 +39,7 @@
 #include <limits.h>
 #include <time.h>
 @INSERT_MATH_HEADER@
+@INSERT_STDBOOL_HEADER@
 #include <tiffio.h>
 
 #include <spandsp/telephony.h>
