--- a/config-h.in
+++ b/config-h.in
@@ -179,6 +179,9 @@
 /* Define to 1 if you have the <stdbool.h> header file. */
 #undef HAVE_STDBOOL_H
 
+/* Define to 1 if you have the <stdfix.h> header file. */
+#undef HAVE_STDFIX_H
+
 /* Define to 1 if you have the <stdint.h> header file. */
 #undef HAVE_STDINT_H
 
