--- a/src/libspandsp.2005.vcproj
+++ b/src/libspandsp.2005.vcproj
@@ -293,6 +293,7 @@
 <File RelativePath="spandsp/private/noise.h"></File>
 <File RelativePath="spandsp/private/oki_adpcm.h"></File>
 <File RelativePath="spandsp/private/playout.h"></File>
+<File RelativePath="spandsp/private/plc.h"></File>
 <File RelativePath="spandsp/private/power_meter.h"></File>
 <File RelativePath="spandsp/private/queue.h"></File>
 <File RelativePath="spandsp/private/schedule.h"></File>
